--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
             <div style="color: #333333; font-weight: 400; margin-top: 40px">
                 OR
             </div>
-            <div>
+            <div style="margin-top: 40px">
                 <form>
                     <input placeholder="Email Address" style="margin-bottom: 15px">
                     <input placeholder="Password" style="margin-top: 15px">
