--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,9 @@
             <a  href="#">Prong</a>
             <a  href="#">Pages</a>
         </nav>
+        <div class="burger">
+            <img src="../images/@media/open-menu.png">
+        </div>
         <a class="SignUp">
             Sign Up
         </a>
@@ -50,11 +53,11 @@
                     <input placeholder="Password" style="margin-top: 15px">
                 </form>
             </div>
-            <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between; margin-top: 20px">
-                <div style="margin-left: 200px; color: #0f7bff; font-weight: 400; cursor: pointer; font-size: 12px">
+            <div class="underInput">
+                <div class="underInput1">
                     <a >Forgot Password?</a>
                 </div>
-                <div style="margin-right: 200px; color: #0f7bff; font-weight: 400; cursor: pointer; font-size: 12px">
+                <div class="underInput2">
                     <a>Create a free account?</a>
                 </div>
             </div>
